# platanus-hack-26-ar-team-14

./: .env.example  .gitignore  AGENTS.md  README.md  STYLE_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  platanus-hack-project.json  project-description.md  prompting_guidelines.md  skills-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  justfile  pyproject.toml
backend/.chroma/: chroma.sqlite3
backend/alembic/: env.py
backend/alembic/versions/: 3520af78d4d0_merge_class_learning_records_and_course_.py  3f041ca8d7b7_add_plan_anual_plan_anual_items_.py  485927322673_add_password_hash_to_teacher.py  5d2f43c6b1aa_link_courses_to_plan_anual.py  91208e251e2e_merge_class_learning_records_and_course_.py  91a7d0f40041_create_teachers_courses_students.py  9322b354aaaf_merge_heads.py  9a8b7c6d5e4f_add_class_learning_records.py  a1b2c3d4e5f6_add_course_block_number.py  a3c0d1e2f3b4_replace_worksheets_with_questions.py  a7f3c2b1d4e8_add_material_kind_and_guia.py  b2c3d4e5f6a7_drop_plan_anual_item_cantidad_clases.py  b4d5e6f7a8b9_add_question_alternatives.py  b8e4d5c2f917_add_material_resultados.py  c1d2e3f4a5b6_add_guias_collections.py  d8e9f0a1b2c3_add_alerts.py  e2880a786d4e_add_worksheets_tables.py  e5b6c7d8e9f0_remodel_plan_anual.py  (+4 more)
backend/app/: agent.py  auth.py  chat_attachments.py  chat_status.py  config.py  db.py  graph.py  main.py  models.py  transcription.py  uploads.py
backend/data/: arma_evaluacion_ma05.json
backend/scripts/: demo_plan_anual.json  extract_cde_guides.py  index.py  seed_demo.py
deploy/: Caddyfile  (+2 more)
(+107 files in other folders)
