[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain[anthropic]>=1.2.18",
    "langgraph>=1.1.10",
    "pdfplumber>=0.11.9",
    "pydantic-settings>=2.14.1",
]
