[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.1",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain[anthropic]>=1.2.18",
    "langgraph>=1.1.10",
    "pdfplumber>=0.11.9",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
